overlays/dev/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx
  namespace: myapp-dev
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nginx-chart
          image: nginx:latest
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: {duration: 2}
        - setWeight: 100
