overlays/dev/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-httproute
  namespace: myapp-dev
spec:
  hostnames:
    - dev.myapp.example.com
